2009-03-18  Andy Buckley  <andy@insectnation.org>

	* Improving LaTex docs to show email addresses in printable form
	and to group analyses by collider or other metadata.

	* Adding doc script to include run info in LaTeX docs, and to make
	HTML docs.

	* Removing WZandh projection, which wasn't generator independent
	and whose sole usage was already replaced by ZFinder.

	* Improvements to constructors of ZFinder and InvMassFS.

	* Changing ExampleTree to use real FS-based Z finding.

2009-03-16  Andy Buckley  <andy@insectnation.org>

	* Allow the -H histo file spec to give a full name if wanted. If
	it doesn't end in the desired extension, it will be added.

	* Adding --runname option (and API elements) to choose a run name
	to be prepended as a "top level directory" in histo paths. An
	empty value results in no extra TLD.

2009-03-06  Andy Buckley  <andy@insectnation.org>

	* Adding R=0.2 photon clustering to the electrons in the CDF 2000
	Z pT analysis.

2009-03-04  Andy Buckley  <andy@insectnation.org>

	* Fixing use of fastjet-config to not use the user's PATH variable.

	* Fixing SWIG type table for HepMC object interchange.

2009-02-20  Andy Buckley  <andy@insectnation.org>

	* Adding use of new metadata in command line analysis querying
	with the rivet command, and in building the PDF Rivet manual.

	* Adding extended metadata methods to the Analysis interface and
	the Python wrapper. All standard analyses comply with this new
	interface.

2009-02-19  Andy Buckley  <andy@insectnation.org>

	* Adding usefully-scoped config headers, a Rivet::version()
	function which uses them, and installing the generated headers to
	fix "external" builds against an installed copy of Rivet. The
	version() function has been added to the Python wrapper.

2009-02-05  Andy Buckley  <andy@insectnation.org>

	* Removing ROOT dependency and linking. Woo! There's no need for
	this now, because the front-end accepts no histo format switch and